--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Java Maven CI/CD
+name: Java Maven CI/CD with Docker
 
 on: [push, pull_request]
 
@@ -21,3 +21,12 @@ jobs:
 
             - name: Run Tests
               run: mvn test
+
+            - name: Log in to Docker Hub
+              run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+            - name: Build Docker Image
+              run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ci-cd-demo:latest .
+
+            - name: Push Docker Image
+              run: docker push ${{ secrets.DOCKER_USERNAME }}/ci-cd-demo:latest
