--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,9 @@ jobs:
             - name: Run Tests
               run: mvn test
 
+            - name: Verify JAR File Exists
+              run: ls -l target/
+
             - name: Log in to Docker Hub
               run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
